# CheeseAPI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
CheeseAPI/: __init__.py  app.py  cSignal.py  command.py  cors.py  exception.py  file.py  handle.py  module.py  printer.py  protocol.py  request.py  response.py  route.py  schedule.py  scheduler.py  server.py  signal.py  system.py  text.py  utils.py  validator.py  websocket.py  worker.py  workspace.py
demo/CRUD/: app.py
demo/CRUD/User/: __init__.py  api.py  model.py  service.py  validator.py
demo/LoggerAutoExpire/: app.py
document/: App.md  Developer.md  File.md  Request.md  Response.md  Route.md  Schedule.md  Validator.md  Websocket.md  demo.md
document/App/: Cors.md  RouteBus.md  Scheduler.md  Server.md  Signal.md  Workspace.md
documents/: App.md  CheeseAPI.md  File.md  Module.md  Request.md  Response.md  Route.md  Scheduler.md  Signal.md  Validator.md  Websocket.md  command.md  decorator.md  detail.md  file.md  module.md  request.md  response.md  route.md  signal.md  websocket.md  生命周期.md
documents/App/: Cors.md  Handle.md  Server.md  Workspace.md
documents/img/: 生命周期.pos
examples/: default.py  dynamic_route.py  scheduler.py  static.py  validator.py  websocket.py
examples/static/: file.txt
tests/: __init__.py  chunked.py  range.py
