[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "CheeseAPI"
version = "1.6.11"
description = "一款web协程框架。"
readme = "README.md"
license-files = { paths = [ "LICENSE" ] }
authors = [
    { name = "Cheese Unknown", email = "cheese@cheese.ren" }
]
keywords = [ 'API', 'BackEnd' ]

dependencies = [
    "CheeseLog==1.1.*",
    "xmltodict",
    "websockets",
    "uvloop",
    "httptools",
    "CheeseSignal==1.2.*",
    "dill",
    "pydantic",
    "email-validator",
    "setproctitle"
]

[project.urls]
Source = "https://github.com/CheeseUnknown/CheeseAPI"

[tool.hatch.build.targets.sdist]
include = [ "/CheeseAPI" ]
