[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "CheeseAPI"
version = "2.0.0"
description = "一款web协程框架"
readme = "README.md"
license-files = { paths = [ "LICENSE" ] }
authors = [
    { name = "Cheese Unknown", email = "cheese@cheese.ren" }
]
keywords = [ 'API', 'BackEnd' ]

dependencies = [
    "CheeseLog==2.1.*",
    "CheeseSignal==2.1.*",
    "pydantic",
    "redis",
    "psutil",
    "brotli",
    "zstandard"
]

[project.urls]
Source = "https://github.com/CheeseUnknown/CheeseAPI"

[tool.hatch.build.targets.sdist]
include = [ "/CheeseAPI" ]

[project.optional-dependencies]
dev = [
    "requests",
    "websockets"
]
